--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "ship-reporting",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": ">=20.19.0"
+  },
   "workspaces": [
     "backend",
     "frontend",
