--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,4 +1,4 @@
-# Nixpacks configuration for Railway
+# Nixpacks configuration for Railway - Backend Service
 # Ensures Node.js 20 is used (npm is bundled with nodejs)
 
 [phases.setup]
