--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "antd": "^5.29.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router": "^7.10.1"
+    "react-router": "^7.10.1",
+    "serve": "^14.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
