--- a/frontend/railway.toml
+++ b/frontend/railway.toml
@@ -3,7 +3,7 @@
 
 [build]
 builder = "nixpacks"
-buildCommand = "npm ci && npm run build"
+buildCommand = "npm install && npm run build"
 
 [deploy]
 startCommand = "npx serve dist -s -l $PORT"
