--- a/frontend/railway.toml
+++ b/frontend/railway.toml
@@ -3,7 +3,10 @@
 
 [build]
 builder = "nixpacks"
-buildCommand = "npm install && npm run build"
+buildCommand = "npm run build"
+
+[phases.install]
+cmds = ["npm install"]
 
 [deploy]
 startCommand = "npx serve dist -s -l $PORT"
