--- a/frontend/railway.toml
+++ b/frontend/railway.toml
@@ -9,5 +9,5 @@ buildCommand = "npm run build"
 cmds = ["npm install"]
 
 [deploy]
-startCommand = "npx serve dist -s -l $PORT"
+startCommand = "npx serve dist -s -l tcp://0.0.0.0:$PORT"
 
