--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -3,7 +3,7 @@
 
 [build]
 builder = "nixpacks"
-buildCommand = "cd ../packages/prisma && npm install && npx prisma generate && npx prisma migrate deploy && npm run build && cd ../backend && npm install && npm run build"
+# Build command is now handled in nixpacks.toml to avoid automatic npm install issues
 
 [deploy]
 startCommand = "node dist/main.js"
