--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,7 +5,13 @@
 nixPkgs = ["nodejs_20"]
 
 [phases.install]
-# Skip automatic npm install to prevent issues with workspace dependencies
-# Installation is handled in the buildCommand
-cmds = ["echo 'Installation handled in buildCommand'"]
+cmds = ["npm install --include=dev"]
 
+[phases.build]
+cmds = [
+    "npx prisma generate --schema=packages/prisma/prisma/schema.prisma",
+    "npm run build --workspace=backend"
+]
+
+[start]
+cmd = "node backend/dist/main.js"
