Added SendGrid email service for sending organization-related emails Added OrganizationForm and OrganizationList components for managing organizations in the frontend Updated Prisma schema and migration to include organization contact fields

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.6.6",
     "@ant-design/icons": "^6.1.0",
     "@refinedev/antd": "^6.0.3",
     "@refinedev/core": "^5.0.6",
