--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "@paralleldrive/cuid2": "^2.3.1",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "@sendgrid/mail": "^8.1.6",
     "@ship-reporting/prisma": "^1.0.0",
     "@types/pdfkit": "^0.17.4",
     "bcrypt": "^6.0.0",
